- 시퀀스 다이트그램 자바버전 초안 구현중. * 스타트포인트에 초기화 작업 1차 완료. * 예외 처리 추가 및 다이어그램 생성을 위한 분석, 다이어그램 문구 생성정 추가 작업 예정.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -8,10 +8,9 @@
     <!-- A displayed Vendor name or Organization ID displayed on the Plugins Page. -->
     <vendor email="pjhplayer@gmail.com" url="https://github.com/JinJinHoHo">Jinho</vendor>
 
-    <!-- 플러그인 디펜턴시 설정(미설정시 테스트IDE에서 관련 클래스 못찾음. -->
+    <!-- 플러그인 디펜턴시 설정(미설정시 테스트IDE에서 관련 클래스 못찾음.) -->
     <depends>com.intellij.java</depends>
     <depends>org.intellij.plugins.markdown</depends>
-    <depends>com.intellij.platform.images</depends>
 
     <!-- Text to display as description on Settings | Plugin page -->
     <description>
